// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsSimpleSubnetModule UT input changes should handle subnetName change 2`] = `
"- Expected
+ Received

  Object {
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
-   "output.nacl-region-private-subnet-NetworkAclId": Object {
-     "value": "aws_network_acl.nacl-region-private-subnet.id",
+   "output.nacl-region-changed-subnet-NetworkAclId": Object {
+     "value": "aws_network_acl.nacl-region-changed-subnet.id",
    },
-   "output.rt-region-private-subnet-RouteTableId": Object {
-     "value": "aws_route_table.rt-region-private-subnet.id",
+   "output.rt-region-changed-subnet-RouteTableId": Object {
+     "value": "aws_route_table.rt-region-changed-subnet.id",
    },
-   "output.rt-region-private-subnet-subnetAssociationId": Object {
-     "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
+   "output.rt-region-changed-subnet-subnetAssociationId": Object {
+     "value": "aws_route_table_association.rt-region-changed-subnet_assoc.id",
    },
-   "output.subnet-region-private-subnet-SubnetArn": Object {
-     "value": "aws_subnet.subnet-region-private-subnet.arn",
+   "output.subnet-region-changed-subnet-SubnetArn": Object {
+     "value": "aws_subnet.subnet-region-changed-subnet.arn",
    },
-   "output.subnet-region-private-subnet-SubnetId": Object {
-     "value": "aws_subnet.subnet-region-private-subnet.id",
+   "output.subnet-region-changed-subnet-SubnetId": Object {
+     "value": "aws_subnet.subnet-region-changed-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
-   "resource.aws_network_acl.nacl-region-private-subnet": Object {
+   "resource.aws_network_acl.nacl-region-changed-subnet": Object {
      "egress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "ingress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "provider": "aws.123-us-east-1",
-     "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
+     "subnet_ids": "[aws_subnet.subnet-region-changed-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
-   "resource.aws_route_table.rt-region-private-subnet": Object {
+   "resource.aws_route_table.rt-region-changed-subnet": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
-   "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
-     "depends_on": "[aws_route_table.rt-region-private-subnet]",
+   "resource.aws_route_table_association.rt-region-changed-subnet_assoc": Object {
+     "depends_on": "[aws_route_table.rt-region-changed-subnet]",
      "provider": "aws.123-us-east-1",
-     "route_table_id": "aws_route_table.rt-region-private-subnet.id",
-     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
+     "route_table_id": "aws_route_table.rt-region-changed-subnet.id",
+     "subnet_id": "aws_subnet.subnet-region-changed-subnet.id",
    },
-   "resource.aws_subnet.subnet-region-private-subnet": Object {
+   "resource.aws_subnet.subnet-region-changed-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.1.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT input changes should handle subnetOptions change 2`] = `
"- Expected
+ Received

  Object {
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.nacl-region-private-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
    },
    "output.subnet-region-private-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-private-subnet.arn",
    },
    "output.subnet-region-private-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-private-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_network_acl.nacl-region-private-subnet": Object {
      "egress": Object {
-       "action": "allow",
+       "action": "deny",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "ingress": Object {
-       "action": "allow",
+       "action": "deny",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-private-subnet": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-private-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-private-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
    },
    "resource.aws_subnet.subnet-region-private-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.1.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT should CUD 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.efs-region-test-filesystem-FileSystemId": Object {
+     "value": "mock.FileSystemId",
+   },
+   "output.igw-region-InternetGatewayId": Object {
+     "value": "mock.InternetGatewayId",
+   },
+   "output.nacl-region-private-subnet-NetworkAclId": Object {
+     "value": "aws_network_acl.nacl-region-private-subnet.id",
+   },
+   "output.rt-region-private-subnet-RouteTableId": Object {
+     "value": "aws_route_table.rt-region-private-subnet.id",
+   },
+   "output.rt-region-private-subnet-subnetAssociationId": Object {
+     "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
+   },
+   "output.subnet-region-private-subnet-SubnetArn": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.arn",
+   },
+   "output.subnet-region-private-subnet-SubnetId": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "output.vpc-region-VpcId": Object {
+     "value": "mock.VpcId",
+   },
+   "resource.aws_network_acl.nacl-region-private-subnet": Object {
+     "egress": Object {
+       "action": "allow",
+       "cidr_block": "10.0.1.0/24",
+       "from_port": "-1",
+       "protocol": "-1",
+       "rule_no": "10",
+       "to_port": "-1",
+     },
+     "ingress": Object {
+       "action": "allow",
+       "cidr_block": "10.0.1.0/24",
+       "from_port": "-1",
+       "protocol": "-1",
+       "rule_no": "10",
+       "to_port": "-1",
+     },
+     "provider": "aws.123-us-east-1",
+     "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table.rt-region-private-subnet": Object {
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
+     "depends_on": "[aws_route_table.rt-region-private-subnet]",
+     "provider": "aws.123-us-east-1",
+     "route_table_id": "aws_route_table.rt-region-private-subnet.id",
+     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "resource.aws_subnet.subnet-region-private-subnet": Object {
+     "availability_zone": "us-east-1a",
+     "cidr_block": "10.0.1.0/24",
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+ }"
`;

exports[`AwsSimpleSubnetModule UT should CUD 4`] = `
"- Expected
+ Received

  Object {
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.nacl-region-private-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
    },
    "output.subnet-region-private-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-private-subnet.arn",
    },
    "output.subnet-region-private-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-private-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_network_acl.nacl-region-private-subnet": Object {
      "egress": Object {
-       "action": "allow",
+       "action": "deny",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "ingress": Object {
-       "action": "allow",
+       "action": "deny",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-private-subnet": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-private-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-private-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
    },
    "resource.aws_subnet.subnet-region-private-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.1.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT should CUD 6`] = `
"- Expected
+ Received

  Object {
+   "output.efs-mount-region-private-subnet-test-filesystem-MountTargetId": Object {
+     "value": "aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.id",
+   },
+   "output.efs-mount-region-private-subnet-test-filesystem-NetworkInterfaceId": Object {
+     "value": "aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.network_interface_id",
+   },
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.nacl-region-private-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
+   },
+   "output.sec-grp-efs-mount-region-private-subnet-test-filesystem-Arn": Object {
+     "value": "aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.arn",
    },
+   "output.sec-grp-efs-mount-region-private-subnet-test-filesystem-GroupId": Object {
+     "value": "aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id",
+   },
    "output.subnet-region-private-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-private-subnet.arn",
    },
    "output.subnet-region-private-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-private-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
+   },
+   "resource.aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem": Object {
+     "file_system_id": "mock.FileSystemId",
+     "provider": "aws.123-us-east-1",
+     "security_groups": "[aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id]",
+     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
    },
    "resource.aws_network_acl.nacl-region-private-subnet": Object {
      "egress": Object {
        "action": "deny",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "ingress": Object {
        "action": "deny",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-private-subnet": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-private-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-private-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
    },
+   "resource.aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem": Object {
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
    "resource.aws_subnet.subnet-region-private-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.1.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_vpc_security_group_ingress_rule.sec-grp-efs-mount-region-private-subnet-test-filesystem_ingress_0": Object {
+     "cidr_ipv4": "10.0.1.0/24",
+     "depends_on": "[aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem]",
+     "description": "tcp 2049-2049 10.0.1.0/24",
+     "from_port": "2049",
+     "ip_protocol": "tcp",
+     "provider": "aws.123-us-east-1",
+     "security_group_id": "aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id",
+     "to_port": "2049",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT should CUD 8`] = `
"- Expected
+ Received

  Object {
-   "output.efs-mount-region-private-subnet-test-filesystem-MountTargetId": Object {
-     "value": "aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.id",
-   },
-   "output.efs-mount-region-private-subnet-test-filesystem-NetworkInterfaceId": Object {
-     "value": "aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.network_interface_id",
-   },
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
-   },
-   "output.nacl-region-private-subnet-NetworkAclId": Object {
-     "value": "aws_network_acl.nacl-region-private-subnet.id",
-   },
-   "output.rt-region-private-subnet-RouteTableId": Object {
-     "value": "aws_route_table.rt-region-private-subnet.id",
-   },
-   "output.rt-region-private-subnet-subnetAssociationId": Object {
-     "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
-   },
-   "output.sec-grp-efs-mount-region-private-subnet-test-filesystem-Arn": Object {
-     "value": "aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.arn",
-   },
-   "output.sec-grp-efs-mount-region-private-subnet-test-filesystem-GroupId": Object {
-     "value": "aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id",
-   },
-   "output.subnet-region-private-subnet-SubnetArn": Object {
-     "value": "aws_subnet.subnet-region-private-subnet.arn",
-   },
-   "output.subnet-region-private-subnet-SubnetId": Object {
-     "value": "aws_subnet.subnet-region-private-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
-   },
-   "resource.aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem": Object {
-     "file_system_id": "mock.FileSystemId",
-     "provider": "aws.123-us-east-1",
-     "security_groups": "[aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id]",
-     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
-   },
-   "resource.aws_network_acl.nacl-region-private-subnet": Object {
-     "egress": Object {
-       "action": "deny",
-       "cidr_block": "10.0.1.0/24",
-       "from_port": "-1",
-       "protocol": "-1",
-       "rule_no": "10",
-       "to_port": "-1",
-     },
-     "ingress": Object {
-       "action": "deny",
-       "cidr_block": "10.0.1.0/24",
-       "from_port": "-1",
-       "protocol": "-1",
-       "rule_no": "10",
-       "to_port": "-1",
-     },
-     "provider": "aws.123-us-east-1",
-     "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
-     "vpc_id": "mock.VpcId",
-   },
-   "resource.aws_route_table.rt-region-private-subnet": Object {
-     "provider": "aws.123-us-east-1",
-     "vpc_id": "mock.VpcId",
-   },
-   "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
-     "depends_on": "[aws_route_table.rt-region-private-subnet]",
-     "provider": "aws.123-us-east-1",
-     "route_table_id": "aws_route_table.rt-region-private-subnet.id",
-     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
-   },
-   "resource.aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem": Object {
-     "provider": "aws.123-us-east-1",
-     "vpc_id": "mock.VpcId",
-   },
-   "resource.aws_subnet.subnet-region-private-subnet": Object {
-     "availability_zone": "us-east-1a",
-     "cidr_block": "10.0.1.0/24",
-     "provider": "aws.123-us-east-1",
-     "vpc_id": "mock.VpcId",
-   },
-   "resource.aws_vpc_security_group_ingress_rule.sec-grp-efs-mount-region-private-subnet-test-filesystem_ingress_0": Object {
-     "cidr_ipv4": "10.0.1.0/24",
-     "depends_on": "[aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem]",
-     "description": "tcp 2049-2049 10.0.1.0/24",
-     "from_port": "2049",
-     "ip_protocol": "tcp",
-     "provider": "aws.123-us-east-1",
-     "security_group_id": "aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id",
-     "to_port": "2049",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT should CUD tags 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.efs-region-test-filesystem-FileSystemId": Object {
+     "value": "mock.FileSystemId",
+   },
+   "output.igw-region-InternetGatewayId": Object {
+     "value": "mock.InternetGatewayId",
+   },
+   "output.nacl-region-private-subnet-NetworkAclId": Object {
+     "value": "aws_network_acl.nacl-region-private-subnet.id",
+   },
+   "output.rt-region-private-subnet-RouteTableId": Object {
+     "value": "aws_route_table.rt-region-private-subnet.id",
+   },
+   "output.rt-region-private-subnet-subnetAssociationId": Object {
+     "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
+   },
+   "output.subnet-region-private-subnet-SubnetArn": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.arn",
+   },
+   "output.subnet-region-private-subnet-SubnetId": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "output.vpc-region-VpcId": Object {
+     "value": "mock.VpcId",
+   },
+   "resource.aws_network_acl.nacl-region-private-subnet": Object {
+     "egress": Object {
+       "action": "allow",
+       "cidr_block": "10.0.1.0/24",
+       "from_port": "-1",
+       "protocol": "-1",
+       "rule_no": "10",
+       "to_port": "-1",
+     },
+     "ingress": Object {
+       "action": "allow",
+       "cidr_block": "10.0.1.0/24",
+       "from_port": "-1",
+       "protocol": "-1",
+       "rule_no": "10",
+       "to_port": "-1",
+     },
+     "provider": "aws.123-us-east-1",
+     "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table.rt-region-private-subnet": Object {
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
+     "depends_on": "[aws_route_table.rt-region-private-subnet]",
+     "provider": "aws.123-us-east-1",
+     "route_table_id": "aws_route_table.rt-region-private-subnet.id",
+     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "resource.aws_subnet.subnet-region-private-subnet": Object {
+     "availability_zone": "us-east-1a",
+     "cidr_block": "10.0.1.0/24",
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+ }"
`;

exports[`AwsSimpleSubnetModule UT should CUD tags 4`] = `"Compared values have no visual difference."`;

exports[`AwsSimpleSubnetModule UT should CUD tags 6`] = `"Compared values have no visual difference."`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate private subnet with public subnet with a NAT Gateway 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.efs-region-test-filesystem-FileSystemId": Object {
+     "value": "mock.FileSystemId",
+   },
+   "output.igw-region-InternetGatewayId": Object {
+     "value": "mock.InternetGatewayId",
+   },
+   "output.nacl-region-private-subnet-NetworkAclId": Object {
+     "value": "aws_network_acl.nacl-region-private-subnet.id",
+   },
+   "output.nacl-region-public-subnet-NetworkAclId": Object {
+     "value": "aws_network_acl.nacl-region-public-subnet.id",
+   },
+   "output.nat-gateway-region-public-subnet-AllocationId": Object {
+     "value": "aws_eip.nat-gateway-region-public-subnet_eip.id",
+   },
+   "output.nat-gateway-region-public-subnet-NatGatewayId": Object {
+     "value": "aws_nat_gateway.nat-gateway-region-public-subnet.id",
+   },
+   "output.rt-region-private-subnet-RouteTableId": Object {
+     "value": "aws_route_table.rt-region-private-subnet.id",
+   },
+   "output.rt-region-private-subnet-subnetAssociationId": Object {
+     "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
+   },
+   "output.rt-region-public-subnet-RouteTableId": Object {
+     "value": "aws_route_table.rt-region-public-subnet.id",
+   },
+   "output.rt-region-public-subnet-subnetAssociationId": Object {
+     "value": "aws_route_table_association.rt-region-public-subnet_assoc.id",
+   },
+   "output.subnet-region-private-subnet-SubnetArn": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.arn",
+   },
+   "output.subnet-region-private-subnet-SubnetId": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "output.subnet-region-public-subnet-SubnetArn": Object {
+     "value": "aws_subnet.subnet-region-public-subnet.arn",
+   },
+   "output.subnet-region-public-subnet-SubnetId": Object {
+     "value": "aws_subnet.subnet-region-public-subnet.id",
+   },
+   "output.vpc-region-VpcId": Object {
+     "value": "mock.VpcId",
+   },
+   "resource.aws_eip.nat-gateway-region-public-subnet_eip": Object {
+     "domain": "vpc",
+     "provider": "aws.123-us-east-1",
+   },
+   "resource.aws_nat_gateway.nat-gateway-region-public-subnet": Object {
+     "allocation_id": "aws_eip.nat-gateway-region-public-subnet_eip.id",
+     "connectivity_type": "public",
+     "depends_on": "[aws_eip.nat-gateway-region-public-subnet_eip]",
+     "provider": "aws.123-us-east-1",
+     "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
+   },
+   "resource.aws_network_acl.nacl-region-private-subnet": Object {
+     "egress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "0.0.0.0/0",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "30",
+         "to_port": "-1",
+       },
+     ],
+     "ingress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "0.0.0.0/0",
+         "from_port": "1024",
+         "protocol": "-1",
+         "rule_no": "30",
+         "to_port": "65535",
+       },
+     ],
+     "provider": "aws.123-us-east-1",
+     "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_network_acl.nacl-region-public-subnet": Object {
+     "egress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "0.0.0.0/0",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "30",
+         "to_port": "-1",
+       },
+     ],
+     "ingress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "0.0.0.0/0",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "30",
+         "to_port": "-1",
+       },
+     ],
+     "provider": "aws.123-us-east-1",
+     "subnet_ids": "[aws_subnet.subnet-region-public-subnet.id]",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table.rt-region-private-subnet": Object {
+     "provider": "aws.123-us-east-1",
+     "route": Object {
+       "cidr_block": "0.0.0.0/0",
+       "nat_gateway_id": "aws_nat_gateway.nat-gateway-region-public-subnet.id",
+     },
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table.rt-region-public-subnet": Object {
+     "provider": "aws.123-us-east-1",
+     "route": Object {
+       "cidr_block": "0.0.0.0/0",
+       "gateway_id": "mock.InternetGatewayId",
+     },
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
+     "depends_on": "[aws_route_table.rt-region-private-subnet]",
+     "provider": "aws.123-us-east-1",
+     "route_table_id": "aws_route_table.rt-region-private-subnet.id",
+     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "resource.aws_route_table_association.rt-region-public-subnet_assoc": Object {
+     "depends_on": "[aws_route_table.rt-region-public-subnet]",
+     "provider": "aws.123-us-east-1",
+     "route_table_id": "aws_route_table.rt-region-public-subnet.id",
+     "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
+   },
+   "resource.aws_subnet.subnet-region-private-subnet": Object {
+     "availability_zone": "us-east-1a",
+     "cidr_block": "10.0.1.0/24",
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_subnet.subnet-region-public-subnet": Object {
+     "availability_zone": "us-east-1a",
+     "cidr_block": "10.0.0.0/24",
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+ }"
`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate private subnet with public subnet with a NAT Gateway 4`] = `
"- Expected
+ Received

  Object {
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.nacl-region-private-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-private-subnet.id",
    },
    "output.nacl-region-public-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-public-subnet.id",
    },
    "output.nat-gateway-region-public-subnet-AllocationId": Object {
      "value": "aws_eip.nat-gateway-region-public-subnet_eip.id",
    },
    "output.nat-gateway-region-public-subnet-NatGatewayId": Object {
      "value": "aws_nat_gateway.nat-gateway-region-public-subnet.id",
    },
    "output.rt-region-private-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
    },
    "output.rt-region-public-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-public-subnet.id",
    },
    "output.rt-region-public-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-public-subnet_assoc.id",
    },
    "output.subnet-region-private-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-private-subnet.arn",
    },
    "output.subnet-region-private-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-private-subnet.id",
    },
    "output.subnet-region-public-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-public-subnet.arn",
    },
    "output.subnet-region-public-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-public-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_eip.nat-gateway-region-public-subnet_eip": Object {
      "domain": "vpc",
      "provider": "aws.123-us-east-1",
    },
    "resource.aws_nat_gateway.nat-gateway-region-public-subnet": Object {
      "allocation_id": "aws_eip.nat-gateway-region-public-subnet_eip.id",
      "connectivity_type": "public",
      "depends_on": "[aws_eip.nat-gateway-region-public-subnet_eip]",
      "provider": "aws.123-us-east-1",
      "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
    },
    "resource.aws_network_acl.nacl-region-private-subnet": Object {
-     "egress": Array [
-       Object {
+     "egress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.0.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "20",
-         "to_port": "-1",
-       },
-       Object {
-         "action": "allow",
-         "cidr_block": "0.0.0.0/0",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "30",
-         "to_port": "-1",
-       },
-     ],
-     "ingress": Array [
-       Object {
+     "ingress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
-         "to_port": "-1",
-       },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.0.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "20",
        "to_port": "-1",
      },
-       Object {
-         "action": "allow",
-         "cidr_block": "0.0.0.0/0",
-         "from_port": "1024",
-         "protocol": "-1",
-         "rule_no": "30",
-         "to_port": "65535",
-       },
-     ],
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_network_acl.nacl-region-public-subnet": Object {
      "egress": Array [
        Object {
          "action": "allow",
          "cidr_block": "10.0.0.0/24",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "10",
          "to_port": "-1",
        },
        Object {
          "action": "allow",
          "cidr_block": "0.0.0.0/0",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "20",
          "to_port": "-1",
        },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.1.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "30",
-         "to_port": "-1",
-       },
      ],
      "ingress": Array [
        Object {
          "action": "allow",
          "cidr_block": "10.0.0.0/24",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "10",
          "to_port": "-1",
        },
        Object {
          "action": "allow",
          "cidr_block": "0.0.0.0/0",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "20",
-         "to_port": "-1",
-       },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.1.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "30",
          "to_port": "-1",
        },
      ],
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-public-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-private-subnet": Object {
      "provider": "aws.123-us-east-1",
-     "route": Object {
-       "cidr_block": "0.0.0.0/0",
-       "nat_gateway_id": "aws_nat_gateway.nat-gateway-region-public-subnet.id",
-     },
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-public-subnet": Object {
      "provider": "aws.123-us-east-1",
      "route": Object {
        "cidr_block": "0.0.0.0/0",
        "gateway_id": "mock.InternetGatewayId",
      },
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-private-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-private-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
    },
    "resource.aws_route_table_association.rt-region-public-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-public-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-public-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
    },
    "resource.aws_subnet.subnet-region-private-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.1.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_subnet.subnet-region-public-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.0.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate private subnet with public subnet with a NAT Gateway 6`] = `
"- Expected
+ Received

  Object {
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.nacl-region-private-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-private-subnet.id",
    },
    "output.nacl-region-public-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-public-subnet.id",
    },
-   "output.nat-gateway-region-public-subnet-AllocationId": Object {
-     "value": "aws_eip.nat-gateway-region-public-subnet_eip.id",
-   },
-   "output.nat-gateway-region-public-subnet-NatGatewayId": Object {
-     "value": "aws_nat_gateway.nat-gateway-region-public-subnet.id",
-   },
    "output.rt-region-private-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
    },
    "output.rt-region-public-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-public-subnet.id",
    },
    "output.rt-region-public-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-public-subnet_assoc.id",
    },
    "output.subnet-region-private-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-private-subnet.arn",
    },
    "output.subnet-region-private-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-private-subnet.id",
    },
    "output.subnet-region-public-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-public-subnet.arn",
    },
    "output.subnet-region-public-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-public-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
-   },
-   "resource.aws_eip.nat-gateway-region-public-subnet_eip": Object {
-     "domain": "vpc",
-     "provider": "aws.123-us-east-1",
-   },
-   "resource.aws_nat_gateway.nat-gateway-region-public-subnet": Object {
-     "allocation_id": "aws_eip.nat-gateway-region-public-subnet_eip.id",
-     "connectivity_type": "public",
-     "depends_on": "[aws_eip.nat-gateway-region-public-subnet_eip]",
-     "provider": "aws.123-us-east-1",
-     "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
    },
    "resource.aws_network_acl.nacl-region-private-subnet": Object {
      "egress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "ingress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_network_acl.nacl-region-public-subnet": Object {
      "egress": Array [
        Object {
          "action": "allow",
          "cidr_block": "10.0.0.0/24",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "10",
          "to_port": "-1",
        },
        Object {
          "action": "allow",
          "cidr_block": "0.0.0.0/0",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "20",
          "to_port": "-1",
        },
      ],
      "ingress": Array [
        Object {
          "action": "allow",
          "cidr_block": "10.0.0.0/24",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "10",
          "to_port": "-1",
        },
        Object {
          "action": "allow",
          "cidr_block": "0.0.0.0/0",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "20",
          "to_port": "-1",
        },
      ],
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-public-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-private-subnet": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-public-subnet": Object {
      "provider": "aws.123-us-east-1",
      "route": Object {
        "cidr_block": "0.0.0.0/0",
        "gateway_id": "mock.InternetGatewayId",
      },
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-private-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-private-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
    },
    "resource.aws_route_table_association.rt-region-public-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-public-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-public-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
    },
    "resource.aws_subnet.subnet-region-private-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.1.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_subnet.subnet-region-public-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.0.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate subnet with siblings 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.efs-region-test-filesystem-FileSystemId": Object {
+     "value": "mock.FileSystemId",
+   },
+   "output.igw-region-InternetGatewayId": Object {
+     "value": "mock.InternetGatewayId",
+   },
+   "output.nacl-region-private-subnet-NetworkAclId": Object {
+     "value": "aws_network_acl.nacl-region-private-subnet.id",
+   },
+   "output.nacl-region-public-subnet-NetworkAclId": Object {
+     "value": "aws_network_acl.nacl-region-public-subnet.id",
+   },
+   "output.rt-region-private-subnet-RouteTableId": Object {
+     "value": "aws_route_table.rt-region-private-subnet.id",
+   },
+   "output.rt-region-private-subnet-subnetAssociationId": Object {
+     "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
+   },
+   "output.rt-region-public-subnet-RouteTableId": Object {
+     "value": "aws_route_table.rt-region-public-subnet.id",
+   },
+   "output.rt-region-public-subnet-subnetAssociationId": Object {
+     "value": "aws_route_table_association.rt-region-public-subnet_assoc.id",
+   },
+   "output.subnet-region-private-subnet-SubnetArn": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.arn",
+   },
+   "output.subnet-region-private-subnet-SubnetId": Object {
+     "value": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "output.subnet-region-public-subnet-SubnetArn": Object {
+     "value": "aws_subnet.subnet-region-public-subnet.arn",
+   },
+   "output.subnet-region-public-subnet-SubnetId": Object {
+     "value": "aws_subnet.subnet-region-public-subnet.id",
+   },
+   "output.vpc-region-VpcId": Object {
+     "value": "mock.VpcId",
+   },
+   "resource.aws_network_acl.nacl-region-private-subnet": Object {
+     "egress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+     ],
+     "ingress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+     ],
+     "provider": "aws.123-us-east-1",
+     "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_network_acl.nacl-region-public-subnet": Object {
+     "egress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "0.0.0.0/0",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "30",
+         "to_port": "-1",
+       },
+     ],
+     "ingress": Array [
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.0.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "10",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "0.0.0.0/0",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "20",
+         "to_port": "-1",
+       },
+       Object {
+         "action": "allow",
+         "cidr_block": "10.0.1.0/24",
+         "from_port": "-1",
+         "protocol": "-1",
+         "rule_no": "30",
+         "to_port": "-1",
+       },
+     ],
+     "provider": "aws.123-us-east-1",
+     "subnet_ids": "[aws_subnet.subnet-region-public-subnet.id]",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table.rt-region-private-subnet": Object {
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table.rt-region-public-subnet": Object {
+     "provider": "aws.123-us-east-1",
+     "route": Object {
+       "cidr_block": "0.0.0.0/0",
+       "gateway_id": "mock.InternetGatewayId",
+     },
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
+     "depends_on": "[aws_route_table.rt-region-private-subnet]",
+     "provider": "aws.123-us-east-1",
+     "route_table_id": "aws_route_table.rt-region-private-subnet.id",
+     "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
+   },
+   "resource.aws_route_table_association.rt-region-public-subnet_assoc": Object {
+     "depends_on": "[aws_route_table.rt-region-public-subnet]",
+     "provider": "aws.123-us-east-1",
+     "route_table_id": "aws_route_table.rt-region-public-subnet.id",
+     "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
+   },
+   "resource.aws_subnet.subnet-region-private-subnet": Object {
+     "availability_zone": "us-east-1a",
+     "cidr_block": "10.0.1.0/24",
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_subnet.subnet-region-public-subnet": Object {
+     "availability_zone": "us-east-1a",
+     "cidr_block": "10.0.0.0/24",
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+ }"
`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate subnet with siblings 4`] = `
"- Expected
+ Received

  Object {
    "output.efs-region-test-filesystem-FileSystemId": Object {
      "value": "mock.FileSystemId",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.nacl-region-private-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-private-subnet.id",
    },
    "output.nacl-region-public-subnet-NetworkAclId": Object {
      "value": "aws_network_acl.nacl-region-public-subnet.id",
    },
    "output.rt-region-private-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-private-subnet.id",
    },
    "output.rt-region-private-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-private-subnet_assoc.id",
    },
    "output.rt-region-public-subnet-RouteTableId": Object {
      "value": "aws_route_table.rt-region-public-subnet.id",
    },
    "output.rt-region-public-subnet-subnetAssociationId": Object {
      "value": "aws_route_table_association.rt-region-public-subnet_assoc.id",
    },
    "output.subnet-region-private-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-private-subnet.arn",
    },
    "output.subnet-region-private-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-private-subnet.id",
    },
    "output.subnet-region-public-subnet-SubnetArn": Object {
      "value": "aws_subnet.subnet-region-public-subnet.arn",
    },
    "output.subnet-region-public-subnet-SubnetId": Object {
      "value": "aws_subnet.subnet-region-public-subnet.id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_network_acl.nacl-region-private-subnet": Object {
-     "egress": Array [
-       Object {
+     "egress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
        "to_port": "-1",
      },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.0.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "20",
-         "to_port": "-1",
-       },
-     ],
-     "ingress": Array [
-       Object {
+     "ingress": Object {
        "action": "allow",
        "cidr_block": "10.0.1.0/24",
        "from_port": "-1",
        "protocol": "-1",
        "rule_no": "10",
-         "to_port": "-1",
-       },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.0.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "20",
        "to_port": "-1",
      },
-     ],
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-private-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_network_acl.nacl-region-public-subnet": Object {
      "egress": Array [
        Object {
          "action": "allow",
          "cidr_block": "10.0.0.0/24",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "10",
          "to_port": "-1",
        },
        Object {
          "action": "allow",
          "cidr_block": "0.0.0.0/0",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "20",
          "to_port": "-1",
        },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.1.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "30",
-         "to_port": "-1",
-       },
      ],
      "ingress": Array [
        Object {
          "action": "allow",
          "cidr_block": "10.0.0.0/24",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "10",
          "to_port": "-1",
        },
        Object {
          "action": "allow",
          "cidr_block": "0.0.0.0/0",
          "from_port": "-1",
          "protocol": "-1",
          "rule_no": "20",
-         "to_port": "-1",
-       },
-       Object {
-         "action": "allow",
-         "cidr_block": "10.0.1.0/24",
-         "from_port": "-1",
-         "protocol": "-1",
-         "rule_no": "30",
          "to_port": "-1",
        },
      ],
      "provider": "aws.123-us-east-1",
      "subnet_ids": "[aws_subnet.subnet-region-public-subnet.id]",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-private-subnet": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table.rt-region-public-subnet": Object {
      "provider": "aws.123-us-east-1",
      "route": Object {
        "cidr_block": "0.0.0.0/0",
        "gateway_id": "mock.InternetGatewayId",
      },
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_route_table_association.rt-region-private-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-private-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-private-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-private-subnet.id",
    },
    "resource.aws_route_table_association.rt-region-public-subnet_assoc": Object {
      "depends_on": "[aws_route_table.rt-region-public-subnet]",
      "provider": "aws.123-us-east-1",
      "route_table_id": "aws_route_table.rt-region-public-subnet.id",
      "subnet_id": "aws_subnet.subnet-region-public-subnet.id",
    },
    "resource.aws_subnet.subnet-region-private-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.1.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_subnet.subnet-region-public-subnet": Object {
      "availability_zone": "us-east-1a",
      "cidr_block": "10.0.0.0/24",
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
  }"
`;

exports[`AwsSimpleSubnetModule UT should handle moduleId change 2`] = `"Compared values have no visual difference."`;
